--- a/app/src/main/res/layout/row_album.xml
+++ b/app/src/main/res/layout/row_album.xml
@@ -20,6 +20,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@android:color/black"
+            app:imageUrl="@{album.imageUrl}"
             />
         <TextView
             android:id="@+id/album_title"
