--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,90 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.login.LoginActivity"
-    >
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/login_title_textview"
-        android:text="로그인"
-        android:textSize="36sp"
-        android:textColor="@android:color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="84dp"
-        android:layout_marginStart="32dp"
-        />
-    <LinearLayout
-        android:id="@+id/login_form"
+    tools:context=".ui.login.LoginActivity">
+    <data>
+        <variable
+            name="userId"
+            type="String" />
+        <variable
+            name="password"
+            type="String" />
+    </data>
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/login_title_textview"
-        app:layout_constraintStart_toStartOf="parent"
-        android:orientation="vertical"
-        android:paddingVertical="24dp"
-        android:paddingHorizontal="36dp">
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/login_user_id"
-            android:hint="아이디"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            >
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/login_user_password"
-            android:hint="비밀번호"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-            >
-            <com.google.android.material.textfield.TextInputEditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="textPassword"
-                />
-        </com.google.android.material.textfield.TextInputLayout>
-    </LinearLayout>
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="로그인"
-        app:layout_constraintTop_toBottomOf="@id/login_form"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginHorizontal="36dp"
-        android:textSize="16dp"
-        android:paddingVertical="8dp"
-        android:id="@+id/login_button"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@id/login_button"
-        app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="8dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="아이디가 없으신가요?" />
-        <Button
-            android:id="@+id/btn_login_signup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="회원가입"
-            style="@style/Widget.MaterialComponents.Button.TextButton"
-            android:padding="0dp"
-            android:textSize="16dp"
+            android:id="@+id/login_title_textview"
+            android:text="로그인"
+            android:textSize="36sp"
+            android:textColor="@android:color/black"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginTop="84dp"
+            android:layout_marginStart="32dp"
             />
-    </LinearLayout>
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <LinearLayout
+            android:id="@+id/login_form"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/login_title_textview"
+            app:layout_constraintStart_toStartOf="parent"
+            android:orientation="vertical"
+            android:paddingVertical="24dp"
+            android:paddingHorizontal="36dp">
+            <EditText
+                android:id="@+id/login_user_id"
+                android:hint="아이디"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:autofillHints="userId"
+                android:inputType="text"
+                android:text="@={userId}"
+                />
+            <EditText
+                android:id="@+id/login_user_password"
+                android:hint="비밀번호"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:autofillHints="password"
+                android:inputType="textPassword"
+                android:text="@={password}"
+                />
+        </LinearLayout>
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="로그인"
+            app:layout_constraintTop_toBottomOf="@id/login_form"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginHorizontal="36dp"
+            android:textSize="16dp"
+            android:paddingVertical="8dp"
+            android:id="@+id/btn_login"
+            />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:layout_constraintTop_toBottomOf="@id/btn_login"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="8dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="아이디가 없으신가요?" />
+            <Button
+                android:id="@+id/btn_login_signup"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="회원가입"
+                style="@style/Widget.MaterialComponents.Button.TextButton"
+                android:padding="0dp"
+                android:textSize="16dp"
+                />
+        </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
