--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -24,10 +24,12 @@
             android:orientation="vertical"
             android:visibility="@{user != null ? View.VISIBLE : View.GONE}">
             <ImageView
+                android:id="@+id/image_profile"
                 android:layout_width="128dp"
                 android:layout_height="128dp"
                 circleImageUrl="@{user.profileImageURL}"/>
             <Button
+                android:id="@+id/btn_profile_change"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="사진 변경" />
