--- a/app/src/main/res/layout/row_album.xml
+++ b/app/src/main/res/layout/row_album.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:bind="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <import type="dev.doyeong.theillogical.models.AlbumModel" />
 
@@ -20,7 +19,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:background="@android:color/black"
-            app:imageUrl="@{album.imageUrl}"
+            app:imageIdUrl="@{album.imageId}"
             />
         <TextView
             android:id="@+id/album_title"
@@ -29,7 +28,7 @@
             android:layout_marginTop="5dp"
             android:text="@{album.shortTitle}"
             android:textColor="@android:color/black"
-            android:textSize="14dp"
+            android:textSize="14sp"
             />
         <TextView
             android:id="@+id/album_artist"
