--- a/app/src/main/res/layout/row_song.xml
+++ b/app/src/main/res/layout/row_song.xml
@@ -9,6 +9,8 @@
             type="String" />
     </data>
     <LinearLayout
+        android:background="?selectableItemBackground"
+        android:id="@+id/song_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingVertical="20dp"
