--- a/app/src/main/res/layout/activity_album.xml
+++ b/app/src/main/res/layout/activity_album.xml
@@ -48,6 +48,7 @@
                     android:text="@{title}"
                     android:layout_marginTop="16dp"
                     android:textColor="@android:color/black"
+                    android:paddingHorizontal="32dp"
                     />
                 <TextView
                     android:layout_width="wrap_content"
