--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,15 @@
         <variable
             name="duration"
             type="String" />
+        <variable
+            name="currentTime"
+            type="String" />
+        <variable
+            name="imageId"
+            type="String" />
+        <variable
+            name="isPlaying"
+            type="boolean" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -44,7 +53,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:navGraph="@navigation/mobile_navigation" />
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/player"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -55,19 +64,24 @@
             app:layout_constraintBottom_toTopOf="@id/nav_view"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent">
-
             <ImageView
+                android:id="@+id/main_player_image"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:background="@android:color/darker_gray" />
-
+                android:background="@android:color/darker_gray"
+                app:imageIdUrl="@{imageId}"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent" />
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
+                android:layout_marginStart="8dp"
+                android:orientation="vertical"
+                app:layout_constrainedWidth="true"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/main_player_image"
+                app:layout_constraintRight_toLeftOf="@id/main_player_controller">
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -87,10 +101,35 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="@{currentTime}"
+                        android:layout_marginStart="12dp"
+                        android:textSize="10sp"/>
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text=" / "
+                        android:textSize="10sp" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
                         android:text="@{duration}"
                         android:textSize="10sp" />
                 </LinearLayout>
             </LinearLayout>
-        </LinearLayout>
+            <LinearLayout
+                android:id="@+id/main_player_controller"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:orientation="horizontal">
+                    <ImageView
+                        android:background="?selectableItemBackground"
+                        android:src="@{isPlaying ? @drawable/ic_baseline_pause_24 : @drawable/ic_baseline_play_arrow_24 }"
+                        android:layout_width="36dp"
+                        android:layout_height="36dp" />
+            </LinearLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
