--- a/app/src/main/res/layout/row_album.xml
+++ b/app/src/main/res/layout/row_album.xml
@@ -9,6 +9,7 @@
             type="AlbumModel" />
     </data>
     <LinearLayout
+        android:background="?selectableItemBackground"
         android:id="@+id/row_album"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
