--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -26,32 +26,37 @@ tools:context=".ui.player.PlayerActivity">
             app:imageIdUrl="@{song.albumImage}"
             />
 
-        <TextView
-            android:id="@+id/player_title"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/player_song_info"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif-black"
-            android:textSize="30sp"
+            android:padding="16dp"
             app:layout_constraintTop_toBottomOf="@id/player_album_image"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginTop="24dp"
-            android:text="@{song.title}"
-        />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/player_artist_name"
-            app:layout_constraintTop_toBottomOf="@id/player_title"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:layout_marginTop="8dp"
-            android:text="@{song.by.username}"
-            />
+            android:orientation="vertical"
+            android:gravity="center"
+            >
+            <TextView
+                android:id="@+id/player_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="sans-serif-black"
+                android:textSize="30sp"
+                android:text="@{song.title}"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/player_artist_name"
+                android:layout_marginTop="8dp"
+                android:text="@{song.by.username}"
+                />
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/player_play_btn"
-            app:layout_constraintTop_toBottomOf="@id/player_artist_name"
+            app:layout_constraintTop_toBottomOf="@id/player_song_info"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             android:background="?selectableItemBackground"
@@ -83,6 +88,7 @@ tools:context=".ui.player.PlayerActivity">
                 />
         </androidx.constraintlayout.widget.ConstraintLayout>
         <SeekBar
+            android:id="@+id/player_seekbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:max="@{duration}"
