--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -54,6 +54,15 @@ tools:context=".ui.player.PlayerActivity">
                 />
         </LinearLayout>
 
+        <Button
+            android:id="@+id/player_view_playlist_btn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="플레이리스트"
+            app:layout_constraintRight_toLeftOf="@id/player_play_btn"
+            app:layout_constraintTop_toTopOf="@id/player_play_btn"
+            android:layout_marginEnd="30dp"
+            />
         <ImageView
             android:id="@+id/player_play_btn"
             app:layout_constraintTop_toBottomOf="@id/player_song_info"
