--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -53,16 +53,6 @@ tools:context=".ui.player.PlayerActivity">
                 android:text="@{song.by.username}"
                 />
         </LinearLayout>
-
-        <Button
-            android:id="@+id/player_view_playlist_btn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="플레이리스트"
-            app:layout_constraintRight_toLeftOf="@id/player_play_btn"
-            app:layout_constraintTop_toTopOf="@id/player_play_btn"
-            android:layout_marginEnd="30dp"
-            />
         <ImageView
             android:id="@+id/player_play_btn"
             app:layout_constraintTop_toBottomOf="@id/player_song_info"
@@ -106,5 +96,16 @@ tools:context=".ui.player.PlayerActivity">
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/player_timestamps"
             />
+
+        <Button
+            android:id="@+id/player_view_playlist_btn"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="플레이리스트"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/player_seekbar" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
