--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -54,6 +54,26 @@ tools:context=".ui.player.PlayerActivity">
                 />
         </LinearLayout>
         <ImageView
+            android:id="@+id/player_prev_btn"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            app:layout_constraintRight_toLeftOf="@id/player_play_btn"
+            app:layout_constraintTop_toTopOf="@id/player_play_btn"
+            android:layout_marginEnd="36dp"
+            android:background="?selectableItemBackground"
+            android:src="@drawable/ic_baseline_skip_previous_24"
+            />
+        <ImageView
+            android:id="@+id/player_next_btn"
+            android:layout_width="36dp"
+            android:layout_height="36dp"
+            app:layout_constraintLeft_toRightOf="@id/player_play_btn"
+            app:layout_constraintTop_toTopOf="@id/player_play_btn"
+            android:layout_marginStart="36dp"
+            android:background="?selectableItemBackground"
+            android:src="@drawable/ic_baseline_skip_next_24"
+            />
+        <ImageView
             android:id="@+id/player_play_btn"
             app:layout_constraintTop_toBottomOf="@id/player_song_info"
             app:layout_constraintLeft_toLeftOf="parent"
